Name:                obdd
Version:             0.3.3
Cabal-Version:       >= 1.8
Build-type: Simple
Synopsis:            Ordered Reduced Binary Decision Diagrams
Description:         Construct, combine and query OBDDs;
                     an efficient representation for formulas in propositional logic
category:	     Logic
License:             GPL
License-file:        LICENSE
Author:              Johannes Waldmann
Maintainer:          Johannes Waldmann
Homepage:	     https://github.com/jwaldmann/haskell-obdd

Source-Repository head
    Type: git
    Location: git://github.com/jwaldmann/haskell-obdd.git

Library
    Build-Depends:       Chart
                       , Chart-cairo
                       , Chart-diagrams
                       , array
                       , base==4.*
                       , colour >= 2.3.3
                       , colour >= 2.3.3
                       , containers>=0.5
                       , data-default-class >= 0.0.1
                       , directory >= 1.2.2.0
                       , lens >= 4.13
                       , mtl
                       , process >= 1.2.3.0
                       , random
                       , interpolate
                       , QuickCheck >= 2.8
                       , tasty >= 0.11
                       , tasty-quickcheck >= 0.8


    Hs-Source-Dirs:	     src
    Exposed-Modules:     OBDD OBDD.Data OBDD.Make OBDD.Operation OBDD.Property
    Other-Modules:	     OBDD.IntIntMap, OBDD.VarIntIntMap
    ghc-options: -funbox-strict-fields

test-suite obdd-placement
    Hs-Source-Dirs : examples
    Type: exitcode-stdio-1.0
    Main-Is: Placement.hs
    Build-Depends: base, colour >= 2.3.3, colour >= 2.3.3, containers, data-default-class >= 0.0.1, directory >= 1.2.2.0, lens >= 4.13, obdd, process >= 1.2.3.0

test-suite obdd-queens
    Hs-Source-Dirs : examples
    Type: exitcode-stdio-1.0
    Main-Is: Queens.hs
    Build-Depends: base, colour >= 2.3.3, colour >= 2.3.3, containers, data-default-class >= 0.0.1, directory >= 1.2.2.0, lens >= 4.13, obdd, process >= 1.2.3.0


