Name:                obdd
Version:             0.3.3
Cabal-Version:       >= 1.8
Build-type: Simple
Synopsis:            Ordered Reduced Binary Decision Diagrams
Description:         Construct, combine and query OBDDs;
                     an efficient representation for formulas in propositional logic
category:	     Logic
License:             GPL
License-file:        LICENSE
Author:              Johannes Waldmann
Maintainer:          Johannes Waldmann
Homepage:	     https://github.com/jwaldmann/haskell-obdd

Source-Repository head
    Type: git
    Location: git://github.com/jwaldmann/haskell-obdd.git

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       Chart
                     , Chart-cairo
                     , Chart-diagrams
                     , QuickCheck >= 2.8
                     , array
                     , base==4.*
                     , colour >= 2.3.3
                     , colour >= 2.3.3
                     , containers>=0.5
                     , data-default-class >= 0.0.1
                     , directory >= 1.2.2.0
                     , fgl
                     , graphviz
                     , interpolate
                     , lens >= 4.13
                     , mtl
                     , process >= 1.2.3.0
                     , random
                     , tasty >= 0.11
                     , tasty-quickcheck >= 0.8
                     , text >= 1.2.2.1

  exposed-modules:      OBDD OBDD.Data OBDD.Make OBDD.Operation OBDD.Property OBDD.Melt.Operator
  other-modules:     OBDD.Graphics.PDF OBDD.IntIntMap OBDD.VarIntIntMap 


executable test 
    Hs-Source-Dirs:	     src/OBDD/Melt
    build-depends:       QuickCheck >= 2.8
                       , base
                       , obdd
                       , tasty >= 0.11
                       , tasty-quickcheck >= 0.8
                       , text >= 1.2.2.1


    Main-Is: Test.hs
    ghc-options: -funbox-strict-fields



